# mlops-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mlops.yml
api/: serve.py
config/: logging.py  settings.py
model/: train.py
monitoring/: alerts.yml  drift.py  prometheus.yml
monitoring/grafana/dashboards/: fraud_detection.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: check_performance.py  load_test.py  test_api.py
